--- a/index.html
+++ b/index.html
@@ -1,186 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Zmanim App</title>
-
-  <link rel="manifest" href="manifest.json" />
-  <meta name="theme-color" content="#000000" />
-
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      margin: 2rem;
-    }
-    h1 {
-      color: #000000;
-    }
-    #installPrompt, #iosPrompt {
-      position: fixed;
-      bottom: 20px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: rgb(255, 255, 255);
-      border-radius: 16px;
-      box-shadow: rgba(0, 0, 0, 0.15) 0px 8px 24px;
-      padding: 20px;
-      z-index: 1000;
-      max-width: 420px;
-      width: 90%;
-      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-      border: 1px solid rgb(224, 224, 224);
-      transition: 0.3s ease-in-out;
-    }
-    #installPrompt {
-      display: block;
-    }
-    #iosPrompt {
-      display: none;
-      text-align: center;
-    }
-    #installPrompt img, #iosPrompt img {
-      width: 60px;
-      height: 60px;
-      border-radius: 12px;
-      margin-right: 16px;
-      flex-shrink: 0;
-    }
-    #installPrompt button {
-      padding: 10px 18px;
-      background-color: #007bff;
-      color: white;
-      font-size: 0.95rem;
-      font-weight: 500;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: background-color 0.2s ease-in-out;
-    }
-    #installPrompt button:hover {
-      background-color: #0056b3;
-    }
-    #installPrompt div.flex-container {
-      display: flex;
-      align-items: center;
-    }
-    #iosPrompt div.flex-container {
-      display: flex;
-      align-items: center;
-      text-align: left;
-    }
-  </style>
-</head>
-<body>
-
-<!-- Install Prompt UI -->
-<div id="installPrompt">
-  <div class="flex-container">
-    <img src="your-icon.png" alt="App Icon" />
-    <div style="flex: 1;">
-      <h3 style="margin: 0 0 6px; font-size: 1.1rem; color: #111;">Install the app</h3>
-      <p style="margin: 0 0 12px; color: #555; font-size: 0.9rem;">
-        Then open the app from<br /> your home screen.
-      </p>
-      <button id="installBtn">Install</button>
-    </div>
-  </div>
-</div>
-
-<!-- iOS Manual Install Prompt -->
-<div id="iosPrompt">
-  <div class="flex-container">
-    <img src="your-icon.png" alt="App Icon" />
-    <div>
-      <h3 style="margin: 0 0 6px; font-size: 1.1rem; color: #111;">Install the app</h3>
-      <p style="margin: 0; font-size: 0.9rem; color: #555;">
-        Tap the <strong>Share</strong> icon
-        <span style="font-size: 1.2rem;">
-          <svg
-            style="margin-left: -4px; margin-bottom: -6px;"
-            fill="#000000"
-            width="20px"
-            height="20px"
-            viewBox="0 0 50 50"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path d="M30.3 13.7L25 8.4l-5.3 5.3-1.4-1.4L25 5.6l6.7 6.7z"></path>
-            <path d="M24 7h2v21h-2z"></path>
-            <path
-              d="M35 40H15c-1.7 0-3-1.3-3-3V19c0-1.7 1.3-3 3-3h7v2h-7c-.6 0-1 .4-1 1v18c0 .6.4 1 1 1h20c.6 0 1-.4 1-1V19c0-.6-.4-1-1-1h-7v-2h7c1.7 0 3 1.3 3 3v18c0 1.7-1.3 3-3 3z"
-            ></path>
-          </svg>
-        </span>
-        <br />
-        then choose <strong>Add to Home Screen</strong>.
-      </p>
-    </div>
-  </div>
-</div>
-
-<script>
-  // Detect iOS devices to show correct install prompt
-  function isIOS() {
-    return /iPad|iPhone|iPod/.test(navigator.userAgent) && !window.MSStream;
-  }
-
-  window.addEventListener("DOMContentLoaded", () => {
-    if (isIOS()) {
-      document.getElementById("iosPrompt").style.display = "block";
-      document.getElementById("installPrompt").style.display = "none";
-    } else {
-      document.getElementById("installPrompt").style.display = "block";
-      document.getElementById("iosPrompt").style.display = "none";
-    }
-  });
-</script>
-
-<script>
-  let deferredPrompt;
-  const promptUI = document.getElementById("installPrompt");
-  promptUI.style.display = "block";
-
-  window.addEventListener("beforeinstallprompt", (e) => {
-    e.preventDefault();
-    deferredPrompt = e;
-
-    const installBtn = document.getElementById("installBtn");
-    installBtn.addEventListener("click", async () => {
-      promptUI.style.display = "none";
-      deferredPrompt.prompt();
-      const { outcome } = await deferredPrompt.userChoice;
-      console.log(`User response: ${outcome}`);
-      deferredPrompt = null;
-    });
-  });
-
-  window.addEventListener("appinstalled", () => {
-    console.log("PWA installed");
-    document.getElementById("installPrompt").style.display = "none";
-  });
-</script>
-
-<script>
-  // Register Service Worker
-  if ("serviceWorker" in navigator) {
-    navigator.serviceWorker
-      .register("sw.js?v=1")
-      .then(() => console.log("Service Worker registered"))
-      .catch((err) => console.error("Service Worker registration failed:", err));
-  }
-
-  // Redirect if running as installed PWA
-  if (
-    window.matchMedia("(display-mode: standalone)").matches ||
-    window.navigator.standalone === true
-  ) {
-    console.log("Running from installed PWA");
-
-    // Redirect to your Chabad zmanim URL
-    window.location.href =
-      "https://www.chabad.org/calendar/zmanim_cdo/locationId/48237/locationType/2/jewish/Halachic-Times.htm";
-  }
-</script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="refresh" content="0; url=https://www.chabad.org/calendar/zmanim_cdo/locationId/48237/locationType/2/jewish/Halachic-Times.htm" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Zmanim</title>
+    <link rel="icon" href="your-icon.png" />
+    <link rel="apple-touch-icon" href="your-icon.png" />
+    <meta name="theme-color" content="#000000" />
+  </head>
+  <body style="text-align:center; font-family:sans-serif; padding-top:50px;">
+    <p>Redirecting to Zmanim...</p>
+  </body>
 </html>
