--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       margin-top: 10vh;
       background-color: #f5f5f5;
       color: #333;
+      padding: 0 1em;
     }
     h1 {
       margin-bottom: 0.5em;
@@ -33,6 +34,8 @@
       text-align: center;
       border: 1px solid #ccc;
       border-radius: 4px;
+      max-width: 100%;
+      box-sizing: border-box;
     }
     button {
       font-size: 1.2em;
@@ -44,6 +47,7 @@
       color: white;
       border-radius: 4px;
       transition: background-color 0.3s ease;
+      white-space: nowrap;
     }
     button:hover {
       background-color: #025aa5;
@@ -59,6 +63,7 @@
       gap: 2.5em;
       font-weight: 600;
       margin-bottom: 3em;
+      flex-wrap: wrap;
     }
     .zmanim-item {
       background: white;
@@ -96,6 +101,8 @@
       display: block;
       margin: 0 auto;
       overflow: visible;
+      max-width: 100%;
+      height: auto;
     }
 
     /* Sun icon circle */
@@ -106,6 +113,63 @@
       filter: drop-shadow(0 0 2px rgba(215,140,0,0.7));
       cursor: default;
       transition: transform 0.5s ease;
+    }
+
+    /* ==== MOBILE RESPONSIVE ==== */
+    @media (max-width: 480px) {
+      body {
+        margin-top: 5vh;
+      }
+
+      #clock {
+        font-size: 2em;
+      }
+
+      #controls {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 0.5em;
+        margin-bottom: 1.5em;
+      }
+      input[type="text"] {
+        width: 100%;
+        max-width: 260px;
+        font-size: 1.1em;
+      }
+      button {
+        margin-left: 0;
+        width: 100%;
+        max-width: 260px;
+        font-size: 1.1em;
+        padding: 0.5em;
+      }
+
+      #zmanim {
+        flex-direction: column;
+        gap: 1.5em;
+        margin-bottom: 2em;
+        align-items: center;
+      }
+      .zmanim-item {
+        min-width: unset;
+        width: 90%;
+        max-width: 320px;
+        font-size: 1.15em;
+        padding: 1em;
+      }
+
+      #sunPathContainer {
+        width: 90vw;
+        max-width: 320px;
+        height: auto;
+        margin-bottom: 2em;
+      }
+
+      svg {
+        max-width: 100%;
+        height: auto;
+      }
     }
   </style>
 </head>
@@ -138,13 +202,11 @@
     <div class="zmanim-item" id="sofZmanShmaItem" aria-label="Latest Shema time according to the Gra (Alter Rebbe custom)">
       <div class="icon-wrapper" aria-hidden="true">
         <!-- Clock Icon SVG -->
-			  <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-			    <circle cx="12" cy="12" r="10" fill="#F7C044" opacity="0.3"/>
-			    <!-- Shorter hour hand pointing to 9 -->
-			    <line x1="12" y1="12" x2="8" y2="12"/>
-			    <!-- Full length minute hand pointing to 12 -->
-			    <line x1="12" y1="12" x2="12" y2="6"/>
-			  </svg>
+        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <circle cx="12" cy="12" r="10" fill="#F7C044" opacity="0.3"/>
+          <line x1="12" y1="12" x2="8" y2="12"/>
+          <line x1="12" y1="12" x2="12" y2="6"/>
+        </svg>
       </div>
       <div>
         <div>Latest Shema</div>
