--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8" />
   <title>Shkiah Today - ZIP Lookup with Sun Path</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- ✅ Manifest + Favicon Icon -->
+  <link rel="manifest" href="manifest.json">
+  <link rel="icon" type="image/png" sizes="192x192" href="your-icon.png">
+  <link rel="apple-touch-icon" href="your-icon.png">
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
